[gd_scene load_steps=5 format=3 uid="uid://c12oguamole0m"]

[ext_resource type="Script" path="res://scripts/Settings Menu.gd" id="1_ay34f"]
[ext_resource type="Theme" uid="uid://d18y4voshb0um" path="res://Resources/Menu Theme.tres" id="2_ves45"]
[ext_resource type="Texture2D" uid="uid://u737seevwwgp" path="res://icon.svg" id="3_db3l8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88shl"]
bg_color = Color(0.290196, 0.290196, 0.290196, 1)

[node name="Popup" type="Popup"]
handle_input_locally = false
size = Vector2i(377, 256)
visible = true
min_size = Vector2i(377, 256)
script = ExtResource("1_ay34f")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="Control/PanelContainer"]
layout_mode = 2
current_tab = 2

[node name="Image" type="MarginContainer" parent="Control/PanelContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Control/PanelContainer/TabContainer/Image"]
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Combined_Separate" type="PanelContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/Combined_Separate"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/Combined_Separate/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Reduces hard edges"
theme_override_font_sizes/font_size = 11
text = "Combined Avatar Image"
horizontal_alignment = 1

[node name="SingleMultiToggle" type="CheckBox" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/Combined_Separate/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Reduces hard edges"
theme = ExtResource("2_ves45")

[node name="SelectSingleImage" type="PanelContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_88shl")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSingleImage"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSingleImage/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Sprite sheet has talking texture"
theme_override_font_sizes/font_size = 13
text = "Avatar"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSingleImage/VBoxContainer"]
layout_mode = 2

[node name="ImageButton" type="Button" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSingleImage/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ves45")
text = "Change Image"

[node name="PanelContainer" type="PanelContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSingleImage/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ImagePreview" type="TextureRect" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSingleImage/VBoxContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
texture = ExtResource("3_db3l8")
expand_mode = 2
stretch_mode = 5

[node name="SelectSeparateImages" type="VBoxContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Select Neutral Image" type="PanelContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_88shl")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Select Neutral Image"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Select Neutral Image/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Sprite sheet has talking texture"
theme_override_font_sizes/font_size = 13
text = "Neutral Image"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Select Neutral Image/VBoxContainer"]
layout_mode = 2

[node name="NeutralImageButton" type="Button" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Select Neutral Image/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ves45")
text = "Change Image"

[node name="PanelContainer" type="PanelContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Select Neutral Image/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NeutralImagePreview" type="TextureRect" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Select Neutral Image/VBoxContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
texture = ExtResource("3_db3l8")
expand_mode = 2
stretch_mode = 5

[node name="Blinking Image" type="PanelContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_88shl")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Blinking Image"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Blinking Image/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Sprite sheet has talking texture"
theme_override_font_sizes/font_size = 13
text = "Blinking Image"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Blinking Image/VBoxContainer"]
layout_mode = 2

[node name="BlinkingImageButton" type="Button" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Blinking Image/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ves45")
text = "Change Image"

[node name="PanelContainer" type="PanelContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Blinking Image/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BlinkingImagePreview" type="TextureRect" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Blinking Image/VBoxContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
texture = ExtResource("3_db3l8")
expand_mode = 2
stretch_mode = 5

[node name="Talking Image" type="PanelContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_88shl")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Talking Image"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Talking Image/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Sprite sheet has talking texture"
theme_override_font_sizes/font_size = 13
text = "Talking Image"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Talking Image/VBoxContainer"]
layout_mode = 2

[node name="TalkingImageButton" type="Button" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Talking Image/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ves45")
text = "Change Image"

[node name="PanelContainer" type="PanelContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Talking Image/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TalkingImagePreview" type="TextureRect" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Talking Image/VBoxContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
texture = ExtResource("3_db3l8")
expand_mode = 2
stretch_mode = 5

[node name="Talking + Blinking Image" type="PanelContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_88shl")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Talking + Blinking Image"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Talking + Blinking Image/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Sprite sheet has talking texture"
theme_override_font_sizes/font_size = 13
text = "Talking + Blinking Image"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Talking + Blinking Image/VBoxContainer"]
layout_mode = 2

[node name="TalkingAndBlinkingImageButton" type="Button" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Talking + Blinking Image/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ves45")
text = "Change Image"

[node name="PanelContainer" type="PanelContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Talking + Blinking Image/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TalkingAndBlinkingImagePreview" type="TextureRect" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/SelectSeparateImages/Talking + Blinking Image/VBoxContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
texture = ExtResource("3_db3l8")
expand_mode = 2
stretch_mode = 5

[node name="Mouth" type="PanelContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/Mouth"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/Mouth/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Sprite sheet has talking texture"
text = "Has Talking Texture"
horizontal_alignment = 1

[node name="MouthBox" type="CheckBox" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/Mouth/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Sprite sheet has talking texture"
theme = ExtResource("2_ves45")

[node name="Blinks" type="PanelContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/Blinks"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/Blinks/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Sprite sheet has blinking texture"
text = "Has Blinking Texture"
horizontal_alignment = 1

[node name="BlinkBox" type="CheckBox" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/Blinks/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Sprite sheet has blinking texture"
theme = ExtResource("2_ves45")

[node name="Filter" type="PanelContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/Filter"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/Filter/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Reduces hard edges"
text = "Linear Filter"
horizontal_alignment = 1

[node name="FilterBox" type="CheckBox" parent="Control/PanelContainer/TabContainer/Image/ScrollContainer/VBoxContainer/Filter/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Reduces hard edges"
theme = ExtResource("2_ves45")

[node name="Color" type="MarginContainer" parent="Control/PanelContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/TabContainer/Color"]
layout_mode = 2

[node name="Hue" type="VBoxContainer" parent="Control/PanelContainer/TabContainer/Color/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/TabContainer/Color/VBoxContainer/Hue"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Hue"
horizontal_alignment = 1

[node name="HueSlider" type="HSlider" parent="Control/PanelContainer/TabContainer/Color/VBoxContainer/Hue"]
unique_name_in_owner = true
layout_mode = 2
min_value = -0.5
max_value = 0.5
step = 0.01
value = 0.01

[node name="Saturation" type="VBoxContainer" parent="Control/PanelContainer/TabContainer/Color/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/TabContainer/Color/VBoxContainer/Saturation"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Saturation"
horizontal_alignment = 1

[node name="SatSlider" type="HSlider" parent="Control/PanelContainer/TabContainer/Color/VBoxContainer/Saturation"]
unique_name_in_owner = true
layout_mode = 2
max_value = 2.0
step = 0.01
value = 1.0

[node name="Value" type="VBoxContainer" parent="Control/PanelContainer/TabContainer/Color/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/TabContainer/Color/VBoxContainer/Value"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Value"
horizontal_alignment = 1

[node name="ValSlider" type="HSlider" parent="Control/PanelContainer/TabContainer/Color/VBoxContainer/Value"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="Alpha" type="VBoxContainer" parent="Control/PanelContainer/TabContainer/Color/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/TabContainer/Color/VBoxContainer/Alpha"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Alpha"
horizontal_alignment = 1

[node name="AlpSlider" type="HSlider" parent="Control/PanelContainer/TabContainer/Color/VBoxContainer/Alpha"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="Animation" type="MarginContainer" parent="Control/PanelContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/TabContainer/Animation"]
layout_mode = 2

[node name="Bounces" type="PanelContainer" parent="Control/PanelContainer/TabContainer/Animation/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/TabContainer/Animation/VBoxContainer/Bounces"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/TabContainer/Animation/VBoxContainer/Bounces/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Bounces on voice activity"
text = "Animate Object"
horizontal_alignment = 1

[node name="BounceBox" type="CheckBox" parent="Control/PanelContainer/TabContainer/Animation/VBoxContainer/Bounces/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Bounces on voice activity"
theme = ExtResource("2_ves45")

[node name="Height" type="VBoxContainer" parent="Control/PanelContainer/TabContainer/Animation/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/TabContainer/Animation/VBoxContainer/Height"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Height"
horizontal_alignment = 1

[node name="HeightSlider" type="HSlider" parent="Control/PanelContainer/TabContainer/Animation/VBoxContainer/Height"]
unique_name_in_owner = true
layout_mode = 2
max_value = 50.0
value = 5.0

[node name="Speed" type="VBoxContainer" parent="Control/PanelContainer/TabContainer/Animation/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/TabContainer/Animation/VBoxContainer/Speed"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Speed"
horizontal_alignment = 1

[node name="SpeedSlider" type="HSlider" parent="Control/PanelContainer/TabContainer/Animation/VBoxContainer/Speed"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.02
max_value = 2.0
step = 0.01
value = 1.0

[node name="shortcuts" type="MarginContainer" parent="Control/PanelContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Control/PanelContainer/TabContainer/shortcuts"]
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 2

[node name="shortcutImagesRoot" type="VBoxContainer" parent="Control/PanelContainer/TabContainer/shortcuts/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Control/PanelContainer/TabContainer/shortcuts/ScrollContainer/shortcutImagesRoot"]
layout_mode = 2

[node name="addShortcutImage" type="Button" parent="Control/PanelContainer/TabContainer/shortcuts/ScrollContainer/shortcutImagesRoot/CenterContainer"]
layout_mode = 2
text = "add +"

[connection signal="pressed" from="Control/PanelContainer/TabContainer/shortcuts/ScrollContainer/shortcutImagesRoot/CenterContainer/addShortcutImage" to="." method="_on_add_shortcut_image_pressed"]
